After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 538438 - Broken decoration of very large windows
Broken decoration of very large windows
Status: RESOLVED FIXED
Product: metacity
Classification: Other
Component: general
2.22.x
Other All
: Normal minor
: ---
Assigned To: Metacity maintainers list
Metacity maintainers list
Depends on:
Blocks:
 
 
Reported: 2008-06-15 11:52 UTC by timn1991
Modified: 2016-06-24 11:30 UTC
See Also:
GNOME target: ---
GNOME version: 2.21/2.22



Description timn1991 2008-06-15 11:52:40 UTC
Please describe the problem:
When I resize a window to more than double the width of my screen (1650 pixels) the window decoration gets broken.

Steps to reproduce:
1. Resize a window to a width of some thousand pixels by dragging it to the border of the screen and resizing it multiple times.
2. If it is not broken yet, try to move another window over the window decoration. When the other window is gone, the decoration is gray.

Actual results:
Broken window decoration (see screenshot)

Expected results:
Not broken window decoration

Does this happen every time?
Yes. But sometimes it only happens when you drag another window over the decoration.

Other information:
Screenshot: http://i25.tinypic.com/11v486g.jpg
The Firefox logo in the window decoration is doublicated and some areas are grey or brown.

System: Ubuntu 8.04, GNOME 2.22.2
Driver: fglrx (but no Compiz!)
Comment 1 Owen Taylor 2010-09-20 22:11:32 UTC
Bug is probably described in:

 https://bugzilla.gnome.org/show_bug.cgi?id=630203#c25

meta_frames_paint_to_drawable() clips a region to paint in window coordinates against the screen size in absolute coordinates, so if a window is bigger than the screen, and not at 0,0, then we'll clip drawing that shouldn't be clipped.