frames: remove clip_to_screen optimization

https://bugzilla.gnome.org/show_bug.cgi?id=538438